# rustapi

./: Cargo.toml  Procfile  e postgres{Client, Error, NoTls}
src/: dbHelper.rs  main.rs
