[package]
name = "RustApi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.2" 
actix-web = "3"
brotli-sys = "0.3.2"
listenfd = "0.3"
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }